--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -1,3 +1,10 @@
+.project {
+     margin-left: 20px;
+     background-color: #deebf7;
+     padding: 20px;
+     width: 525px;
+ }
+
 /* applies to anything of class "example-class-selector" */
 .example-class-selector {
 	margin-top: 2em;
@@ -31,4 +38,16 @@ body {
      right: 0;
      position: absolute;
      z-index: -1;	
+}
+
+p {
+     font-variant: small-caps;
+}
+
+.project p {
+     font-variant: small-caps;
+}
+
+#project1 {
+     font-variant: small-caps;
 }
